# BasikGL

./: .gitignore  .gitmodules  CMakeLists.txt  ReadME.md
examples/: CMakeLists.txt
examples/test/: CMakeLists.txt
examples/test/assets/shaders/: vert.shader
examples/test/src/: main.cpp
examples/triangle/: CMakeLists.txt
examples/triangle/assets/shaders/: pixel.shader
examples/triangle/src/: main.cpp
glad/: CmakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
include/basikgl/: basikgl.h
include/basikgl/camera/: camera.h  gui_camera.h  perspective_camera.h  player_camera.h
include/basikgl/color/: color.h
include/basikgl/context/: asset_manager.h  context_manager.h  context_properties.h  gl_tests.h  render_context.h
include/basikgl/core/: convert_values.h  error_handler.h  logger.h
include/basikgl/gfx/: asset.h  indexbuffer.h  shader.h  vertex.h  vertexarray.h  vertexbuffer.h
include/basikgl/gfx/texture/: texture.h  texture2d.h
include/basikgl/input/: keyinput.h  mouseinput.h
include/basikgl/render/: renderer.h
include/basikgl/sprite/: sprite.h
include/basikgl/time/: clock.h  timer.h  timespan.h
include/basikgl/utils/: utils.h  uuid_generator.h
include/basikgl/window/: window.h  window_attributes.h  window_callbacks.h  window_properties.h
include/color/: ansi_color_codes.h
include/context/: context_manager.h  context_properties.h
include/core/: error_handler.h  logger.h
include/gfx/: vertexbuffer.h
include/gfx/texture/: texture.h
include/input/: mouseinput.h
include/time/: timer.h  timespan.h
include/window/: window.h
src/: CMakeLists.txt
src/camera/: camera.h  gui_camera.h  perspective_camera.cpp  perspective_camera.h  player_camera.cpp  player_camera.h
src/color/: color.cpp
src/context/: asset_manager.cpp  asset_manager.h  context_manager.cpp  context_manager.h  context_properties.cpp  context_properties.h  gl_tests.cpp  render_context.cpp  render_context.h
src/core/: convert_values.cpp  core.cpp  core.h  error_handler.cpp  logger.cpp
src/gfx/: asset.h  indexbuffer.cpp  shader.cpp  vertex.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp
src/gfx/texture/: texture2d.cpp  texture2d.h
src/input/: cursor.h
src/render/: renderer.cpp
src/sprite/: sprite.cpp
src/time/: clock.cpp  timer.cpp  timespan.cpp
src/utils/: utils.cpp  utils.h  uuid_generator.cpp  uuid_generator.h
src/window/: window.cpp  window.h  window_attributes.cpp  window_attributes.h  window_callbacks.h  window_properties.h
stb_image/: CMakeLists.txt
tiny_obj_loader/: CMakeLists.txt
